better time and date formats
