# backend/docs/swagger.json
@@ -375,6 +375,12 @@
                 "arrivalDate": {
                     "type": "string"
                 },
+                "checkInTime": {
+                    "type": "string"
+                },
+                "checkOutTime": {
+                    "type": "string"
+                },
                 "departureDate": {
                     "type": "string"
                 },
@@ -411,6 +417,9 @@
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "time": {
                     "type": "string"
                 },
                 "tripId": {
@@ -470,14 +479,17 @@
                 "airline": {
                     "type": "string"
                 },
-                "arrivalTime": {
+                "arrivalDateTime": {
                     "type": "string"
                 },
-                "departureTime": {
+                "departureDateTime": {
                     "type": "string"
                 },
                 "destination": {
                     "$ref": "#/definitions/entity.Airport"
+                },
+                "duration": {
+                    "type": "integer"
                 },
                 "flightNumber": {
                     "type": "string"
